--- a/client/src/css/utility/header.css
+++ b/client/src/css/utility/header.css
@@ -10,7 +10,7 @@ html{
     background-color: #05203C;
     color: white;
     width: 100%;
-    height: 8vh;
+    height: 3.2rem;
 }
 .loginsvgandmodalwrap{
     width: 17vw;
